--- a/webserver/web-http/dir_tail.html
+++ b/webserver/web-http/dir_tail.html
@@ -1,3 +1,3 @@
 </ul>
-<address><a href="http://www.itcast.com/">xhttpd</a></address>
+<address><a href="http://www.baidu.com/">xhttpd</a></address>
 </body></html>
