--- a/websocket/websocket.html
+++ b/websocket/websocket.html
@@ -34,7 +34,7 @@
 
 <div id="header">
     <h1 align="left">WebSocket Client</h1>
-    Server: <input id="server_addr" type="text" value="11451400.xyz:8000">
+    Server: <input id="server_addr" type="text" value="127.0.0.1:8001">
     <input id="btn_connect" type="button" value="Connect!"><br/><br/>
 
     Message: <input id="message" type="text" value="">
